--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum</title>
+    <title>Художній музей</title>
     <link
       rel="favicon"
       type="image/svg"
-      href="images/logo-true.svg"
+      href="./images/logo-true.svg"
     >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -37,18 +37,18 @@
               музей
             </h1>
 
-            <div class="header__tickets">
+            <a href="#" class="header__tickets">
               <div class="header__tickets-signature">
                 Квитки
               </div>
-              <div class="header__tickets-arrow">
+              <div class="button">
                 <img
                   src="./images/Vector (1).svg"
                   alt="tickets arrow"
-                  class="header__tickets-logo"
+                  class="button__logo"
                 >
               </div>
-            </div>
+            </a>
 
             <div class="header__action">
               <div class="header__action-line"></div>
@@ -123,7 +123,7 @@
 
           <div class="event events__event">
             <div class="grid grid--desktop">
-              <div class="grid__item grid__item--1-7">
+              <div class="grid__item grid__item--desktop-1-7 grid__item--tablet-1-6">
                 <div class="event__photo-container">
                   <img
                     src="./images/2.png"
@@ -133,7 +133,7 @@
                 </div>
               </div>
 
-              <div class="grid__item grid__item--9-12">
+              <div class="grid__item grid__item--tablet-1-4 grid__item--desktop-9-12">
                 <div class="event__details">
                   <div class="event__value">
                     <div class="event__meaning">ВИСТАВКА</div>
@@ -151,7 +151,7 @@
 
           <div class="event events__event">
             <div class="grid grid--desktop">
-              <div class="grid__item grid__item--6-12 grid__item--second">
+              <div class="grid__item grid__item--desktop-6-12 grid__item--tablet-1-6 grid__item--second">
                 <div class="event__photo-container">
                   <img
                     src="./images/3.png"
@@ -161,7 +161,7 @@
                 </div>
               </div>
 
-              <div class="grid__item grid__item--1-4 grid__item--first">
+              <div class="grid__item grid__item--tablet-1-4 grid__item--desktop-1-4 grid__item--first">
                 <div class="event__details">
                   <div class="event__value">
                     <div class="event__meaning">ВИСТАВКА</div>
@@ -187,7 +187,7 @@
             </div>
 
             <div class="event__details event__details--3">
-              <div class="event__value">
+              <div class="event__value event__value--3">
                 <div class="event__meaning">ЛЕКЦІЯ</div>
                 <div class="event__date">26/08/2019 - 11:00</div>
               </div>
@@ -202,15 +202,165 @@
       <section class="gallery page__section">
         <div class="container">
           <h2 class="page__section-title">Галерея</h2>
+
+          <div class="gallery__photos">
+            <img
+              src="./images/5.png"
+              alt="women"
+              class="gallery__photo"
+            >
+
+            <img
+              src="./images/Rectangle 24.1.svg"
+              alt="gus"
+              class="gallery__photo"
+            >
+
+            <img
+              src="./images/6.png"
+              alt="village"
+              class="gallery__photo"
+            >
+
+            <img
+              src="./images/7.png"
+              alt="park"
+              class="gallery__photo"
+            >
+
+            <img
+              src="./images/8.png"
+              alt="ocean"
+              class="gallery__photo"
+            >
+          </div>
+
+          <div class="gallery__slider">
+            <img
+              src="./images/ballgreen.svg"
+              alt="active slider"
+              class="gallery_slider-item"
+            >
+
+            <img
+              src="./images/ballgrey.svg"
+              alt="hold slider"
+              class="gallery_slider-item"
+              >
+
+            <img
+              src="./images/ballgrey.svg"
+              alt="hold slider"
+              class="gallery_slider-item"
+            >
+
+            <img
+              src="./images/ballgrey.svg"
+              alt="hold slider"
+              class="gallery_slider-photo"
+            >
+          </div>
         </div>
       </section>
 
-      <section class="page__section">
+      <section class="follow page__section">
         <div class="container">
-          <h2 class="page__section-title">Підписка</h2>
+          <div class="follow__container">
+            <h2 class="page__section-title follow__title">Підписка</h2>
+            <p class="follow__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form action="#" class="follow__form">
+              <input
+                type="email"
+                class="follow__email"
+                placeholder="E-mail"
+                required
+              >
+              <button href="#" class="follow__button">
+                <div class="button button-2">
+                  <img
+                    src="./images/arrow2.svg"
+                    alt="tickets arrow"
+                    class="button__logo"
+                  >
+                </div>
+              </button>
+            </form>
+          </div>
+
         </div>
       </section>
     </main>
+
+    <footer class="footer page__footer">
+      <div class="contaner">
+        <div class="footer__buttons">
+          <div class="footer__logo">
+            <a href="#" class="logo">
+              NA
+              <br>
+              MU
+            </a>
+          </div>
+          <div class="footer__networks">
+            <a href="#" class="footer__link footer__link-facebook">
+
+            </a>
+            <a href="#" class="footer__link">
+            </a>
+          </div>
+          <div class="footer__info">
+            Графік роботи
+            <br>
+            <br>
+            12:00
+            — 20:00 середа
+            <br>
+            12:00
+            — 20:00  четвер
+            <br>
+            12:00 — 20:00 п’ятниця
+            <br>
+            11:00 — 19:00 субота
+            <br>
+            11:00 — 19:00 неділя
+            <br>
+            <br>
+            Вихідні понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </div>
+          <div class="footer__contacts">
+            Контакти:
+            <br>
+            <br>
+            вул. М. Грушевського, 6; Київ, 01001
+            <br>
+            тел. +38 (044) 278-13-57
+            <br>
+            факс +38 (044) 278-74-54
+            <br>
+            e-mail: info@namu.kiev.ua
+          </div>
+          <div class="footer__button-top">
+            <img src="./images/arrow-top.svg" alt="arrow top">
+          </div>
+          <div class="footer__line"></div>
+          <div class="footer__nav">
+            <a href="#" class="footer__nav-link">Галерея</a>
+
+            <a href="#" class="footer__nav-link">Виставки та події</a>
+
+            <a href="#" class="footer__nav-link">Підписка</a>
+
+            <a href="#" class="footer__nav-link">Контакти</a>
+          </div>
+          <div class="footer__designer"></div>
+        </div>
+
+      </div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
