--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum</title>
+    <title>NA MU</title>
+    <link rel="icon" href="./images/logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
@@ -13,6 +14,7 @@
     >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="./scripts/main.js"></script>
   </head>
   <body class="page__body">
     <header class="header page__header">
@@ -60,7 +62,7 @@
               <a href="#gallery" class="menu__link">Галерея</a>
             </li>
             <li class="menu__item">
-              <a href="#testimonials" class="menu__link">Підписка</a>
+              <a href="#subscribe" class="menu__link">Підписка</a>
             </li>
           </li>
             <li class="menu__item">
@@ -81,10 +83,10 @@
           МУЗЕЙ
         </h1>
         <div class="museum__button">
-          <div class="museum__button-link">КВИТКИ</div>
-          <div class="museum__button-arrow">
+          <a href="#current-events" class="museum__button-link">КВИТКИ</a>
+          <a href="#current-events" class="museum__button-arrow">
             <img src="/images/arrow.svg" alt=">">
-          </div>
+          </a>
         </div>
       </section>
 
@@ -203,10 +205,81 @@
             class="subscribe__input"
             placeholder="E-mail"
           >
-          <div class="subscribe__input-arrow">
+          <button class="subscribe__button">
             <img src="/images/arrow-input.svg" alt=">">
-          </div>
+          </button>
         </form>
+      </section>
+
+      <section class="contact-us">
+        <div class="contact-us__header">
+          <a href="#" class="contact-us__logo logo">
+            <span class="logo__text">
+              NA
+              <br>
+              MU
+            </span>
+          </a>
+          <div class="contact-us__icon">
+            <a
+              class="contact-us__icon-links"
+              href="https://www.facebook.com/"
+              target="blank"
+            >
+              <img src="./images/fb.svg" alt="https://www.facebook.com/">
+            </a>
+            <a
+              class="contact-us__icon-links"
+              href="https://www.instagram.com/"
+              target="blank"
+            >
+              <img src="./images/camera.svg" alt="https://www.instagram.com/">
+            </a>
+          </div>
+        </div>
+        <div class="contact-us__info">
+          <div class="contact-us__work">
+            <h3 class="contact-us__title">Графік роботи</h3>
+            <p class="contact-us__time">
+              <span class="contact-us__time-work">12:00 — 20:00</span>
+              среда
+              <br>
+              <span class="contact-us__time-work">12:00 — 20:00</span>
+              четверг
+              <br>
+              <span class="contact-us__time-work">12:00 — 20:00</span>
+              п’ятниця
+              <br>
+              <span class="contact-us__time-work">12:00 — 20:00</span>
+              субота
+              <br>
+              <span class="contact-us__time-work">12:00 — 20:00</span>
+              неділя
+            </p>
+            <p class="contact-us__text">
+              <span class="contact-us__text--bolt">
+                Вихідні
+              </span>
+              понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+          <div class="contact-us__contact">
+            <h3 class="contact-us__title">Контакти</h3>
+            <div class="contact-us__links">
+              <a href="https://goo.gl/maps/oAXBGxmFbJB2M8XNA" class="contact-us__link">
+                вул. М.Грушевського,6;
+                <br>
+                Київ, 01001
+              </a>
+              <br>
+              <a href="tel:+380442781357" class="contact-us__link">тел. +38 (044) 278-13-57</a>
+              <br>
+              <a href="tel:+380442787454" class="contact-us__link">факс +38 (044) 278-74-54</a>
+              <br>
+              <a href="mailto:info@namu.kiev.ua" class="contact-us__link">e-mail: info@namu.kiev.ua</a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
