--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
             </li>
           </li>
             <li class="menu__item">
-              <a href="#contact-us" class="menu__link">Contact us</a>
+              <a href="#contact-us" class="menu__link">Контакти</a>
             </li>
           </ul>
         </div>
@@ -211,7 +211,7 @@
         </form>
       </section>
 
-      <section class="contact-us">
+      <section class="contact-us page__contact-us" id="contact-us">
         <div class="contact-us__header">
           <a href="#" class="contact-us__logo logo">
             <span class="logo__text">
@@ -260,7 +260,9 @@
               <span class="contact-us__text--bolt">
                 Вихідні
               </span>
-              понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+              понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину до закриття музею
             </p>
           </div>
           <div class="contact-us__contact">
@@ -278,6 +280,26 @@
               <br>
               <a href="mailto:info@namu.kiev.ua" class="contact-us__link">e-mail: info@namu.kiev.ua</a>
             </div>
+          </div>
+        </div>
+        <div class="contact-us__nav">
+          <ul>
+            <li class="contact-us__nav-item">
+              <a href="#gallery" class="contact-us__nav-link">Галерея</a>
+            </li>
+            <li class="contact-us__nav-item">
+              <a href="#current-events" class="contact-us__nav-link">Виставки та події</a>
+            </li>
+          </ul>
+          <div class="contact-us__nav-block">
+            <ul>
+              <li class="contact-us__nav-item">
+                <a href="#" class="contact-us__nav-link">Про Нас</a>
+              </li>
+              <li class="contact-us__nav-item">
+                <a href="#contact-us" class="contact-us__nav-link">Контакти</a>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
