header elements positioning

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,37 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <header hidden class="page__header">
-      <div class="container">
+    <header class="page__header header">
+      <div class="header__content container">
+        <div class="top-bar">
+          <a href="#" class="top-bar__menu menu ">
+            <img src="./images/Vector.svg" alt="menu">
+          </a>
+
+          <a href="#" class="top-bar__logo logo">
+            NA
+            <br>
+            MU
+          </a>
+        </div>
+
+        <div class="header__info">
+          <h1 class="header__title title">
+            Худож<span class="header__title title-trans">ній</span>
+            <br>
+            музей
+          </h1>
+
+          <a href="#" class="header__button button">
+            <div class="button__field">Квитки</div>
+            <div class="button__icon">
+              <img src="./images/button-icon.svg" alt="link to tickets">
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <!-- <div class="container">
         <div class="header__content">
           <div class="top-bar">
             <a href="#" class="top-bar__menu menu ">
@@ -69,8 +98,59 @@
             <div class="left-side-mark__text">Події</div>
           </div>
         </div>
+      </div> -->
+    </header>
+
+    <header class="header--tablet">
+      <div class="grid grid--header grid__tablet container container--without-padding">
+        <div class="grid__item--tablet-1-1">
+          <div class="top-bar">
+            <a href="#" class="top-bar__menu menu leftm top65">
+              <img src="./images/Vector.svg" alt="menu">
+            </a>
+          </div>
+        </div>
+
+        <div class="grid__item--tablet-1-1 grid--left-side-mark leftm">
+          <div class="left-side-mark">
+            <div class="left-side-mark__line"></div>
+            <div class="left-side-mark__text">Події</div>
+          </div>
+        </div>
+
+        <div class="grid__item--tablet-3-6 grid__item--desktop-6-12 item--header">
+          <img
+            src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+            alt="Фасад НАМУ"
+            class="header--tablet__photo"
+          >
+
+          <div class="logo-grid">
+            <a href="#" class="grid__item grid__item-logo grid__item--1-2 logo top15">
+              NA
+              <br>
+              MU
+            </a>
+
+            <div class="header--tablet__info grid__item grid__item--tablet-1-4 grid__item--desktop-1-7">
+              <h1 class="header__title title">
+                Худож<span class="header__title title-trans">ній</span>
+                <br>
+                музей
+              </h1>
+
+              <a href="#" class="header__button button">
+                <div class="button__field">Квитки</div>
+                <div class="button__icon">
+                  <img src="./images/button-icon.svg" alt="link to buy tickets">
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
+
     <main class="body__content">
       <section class="page__section">
         <div class="container">
@@ -198,7 +278,7 @@
     <footer class="page__footer">
       <div class="container">
         <div class="grid">
-          <div class="grid__item grid__item--1-2 grid__item--tablet-1-1">
+          <div class="grid__item grid__item-footer grid__item--1-2 grid__item--tablet-1-1">
             <div class="footer__icons">
               <a href="#" class="footer__logo-namu">
                 <img src="./images/NA MU.svg" alt="NAMU logo">
@@ -216,7 +296,7 @@
             </div>
           </div>
 
-          <div class="grid__item grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+          <div class="grid__item grid__item-footer grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
             <h4 class="footer__subtitle">
               Графік роботи
             </h4>
@@ -245,7 +325,7 @@
             </div>
           </div>
 
-          <div class="grid__item grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
+          <div class="grid__item grid__item-footer grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
             <h4 class="footer__subtitle">
               Контакти
             </h4>
@@ -286,11 +366,11 @@
             <img src="./images/Vectorarrow-up.svg" alt="return to the top of page">
           </a>
 
-          <div class="grid__item footer__line grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7">
+          <div class="grid__item grid__item-footer footer__line grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7">
           </div>
 
-          <div class="grid__item grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
-            <div class="footer__content">
+          <div class="grid__item grid__item-footer grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
+            <div class="footer__content footer__content--top-0">
               <a href="#" class="footer__link link">Галерея</a>
             </div>
             <div class="footer__content">
@@ -298,8 +378,8 @@
             </div>
           </div>
 
-          <div class="grid__item grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
-            <div class="footer__content">
+          <div class="grid__item grid__item-footer grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
+            <div class="footer__content footer__content--top-0">
               <a href="#" class="footer__link link">Про Нас</a>
             </div>
             <div class="footer__content">
