--- a/src/index.html
+++ b/src/index.html
@@ -303,6 +303,18 @@
           </div>
         </div>
       </section>
+
     </main>
+
+    <footer class="footer page__footer">
+      <div class="footer__content">
+        <span class="footer__text">
+          Copyright © 2019. All Rights Reserved.
+        </span>
+        <span class="footer__text">
+          Designed by Zhyriada Marina
+        </span>
+      </div>
+    </footer>
   </body>
 </html>
