wihout slider and burger

--- a/src/index.html
+++ b/src/index.html
@@ -237,7 +237,49 @@
         </div>
       </section>
 
-      <section class="page__section">
+      <section class="page__section gallery">
+        <div class="container">
+          <h2 class="section__title section__title--gallery">
+            Галерея
+          </h2>
+
+          <div class="grid grid__desktop grid--gallery">
+            <div class="grid__item grid__item--desktop-1-4">
+              <img
+                src="./images/Rectangle 13.5.png"
+                alt="Картина жінки в національному вбранні"
+                class="gallery__image"
+              >
+            </div>
+
+            <div class="grid__item grid__item--desktop-5-12">
+              <img
+                src="./images/Rectangle 3.1.png"
+                alt="Засніжене українське село"
+                class="gallery__image"
+              >
+            </div>
+
+            <div class="grid__item grid__item--desktop-1-8">
+              <img
+                src="./images/Rectangle 13.3.png"
+                alt="Картина дівчинка на лавці"
+                class="gallery__image"
+              >
+            </div>
+
+            <div class="grid__item grid__item--desktop-9-12">
+              <img
+                src="./images/Rectangle 13.4.png"
+                alt="Картина моря"
+                class="gallery__image"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section page__submit">
         <div class="container container--without-padding submit">
           <div class="container">
             <div class="grid grid--tablet">
