--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         музей
       </h1>
 
-      <a href="#buy" class="button header__button">
+      <a href="#actual-events" class="button header__button">
         <div class="button__text">
           Квитки
         </div>
@@ -52,7 +52,7 @@
         </div>
       </a>
 
-      <span class="header__text-events">Події</span>
+      <a href="#actual-events" class="header__text-events link">Події</a>
     </header>
 
     <div class="menu page__menu" id="menu">
@@ -71,27 +71,27 @@
       <nav class="nav menu__nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="#home" class="nav__link">
+            <a href="#home" class="nav__link link">
               Головна
             </a>
           </li>
           <li class="nav__item">
-            <a href="#actual-events" class="nav__link">
+            <a href="#actual-events" class="nav__link link">
               Актуальні події
             </a>
           </li>
           <li class="nav__item">
-            <a href="#gallery" class="nav__link">
+            <a href="#gallery" class="nav__link link">
               Галерея
             </a>
           </li>
           <li class="nav__item">
-            <a href="#subscribe" class="nav__link">
+            <a href="#subscribe" class="nav__link link">
               Підписка
             </a>
           </li>
           <li class="nav__item">
-            <a href="#contacts" class="nav__link">
+            <a href="#contacts" class="nav__link link">
               Контакти
             </a>
           </li>
@@ -117,10 +117,10 @@
                   "
             src="./images/show/show1-mobile.png"
             alt="Йду і повертаюсь"
-            class="show__img grid__item--onLaptop-1-6 grid__item--onDesktop-1-7"
+            class="show__img grid__item--onTablet-1-6 grid__item--onDesktop-1-7"
           >
 
-          <div class="container grid__item--onLaptop-1-4 grid__item--onDesktop-9-12">
+          <div class="container grid__item--onTablet-1-4 grid__item--onDesktop-9-12">
             <div class="show__event">
               <span class="show__event-type">
                 Виставка
@@ -131,7 +131,9 @@
             </div>
 
             <h3 class="show__title">
-              Йду і повертаюсь
+              <a href="#buy" class="link">
+                Йду і повертаюсь
+              </a>
             </h3>
 
             <p class="show__info">
@@ -155,10 +157,10 @@
                   "
             src="./images/show/show2-mobile.png"
             alt="І спогади і мрії"
-            class="show__img grid__item--onLaptop-1-6"
+            class="show__img grid__item--onTablet-1-6"
           >
 
-          <div class="container grid__item--onLaptop-1-4">
+          <div class="container grid__item--onTablet-1-4">
             <div class="show__event">
               <span class="show__event-type">
                 Виставка
@@ -169,7 +171,9 @@
             </div>
 
             <h3 class="show__title">
-              І спогади і мрії
+              <a href="#buy" class="link">
+                І спогади і мрії
+              </a>
             </h3>
 
             <p class="show__info">
@@ -204,9 +208,11 @@
             </div>
 
             <h3 class="lecture__title">
-              Від класицизму до
-              <br>
-              романтизму
+              <a href="#buy" class="link">
+                Від класицизму до
+                <br>
+                романтизму
+              </a>
             </h3>
           </div>
 
@@ -273,7 +279,7 @@
       </section>
 
       <section class="contacts main__contacts" id="contacts">
-        <div class="contacts__media grid__item--onLaptop-1-1">
+        <div class="contacts__media grid__item--onTablet-1-1">
           <div class="contacts__logo">
             <a href="#home" class="logo link">
               NA
@@ -288,15 +294,18 @@
               class="contacts__facebook link"
               target="blank"
             >
-              <img src="./images/facebook.svg" alt="facebook">
             </a>
 
             <a
               href="https://www.instagram.com/namu.museum/"
-              class="contacts__intagram link"
+              class="contacts__instagram link"
               target="blank"
             >
-              <img src="./images/instagram.svg" alt="instagram">
+              <!-- <img
+                src="./images/instagram.svg"
+                alt="instagram"
+                class="contacts__img"
+              > -->
             </a>
           </div>
         </div>
@@ -361,22 +370,30 @@
 
         <nav class="contacts__nav">
           <div class="contacts__nav-block">
-            <a href="#gallery" class="contacts__link link">
-              Галерея
-            </a>
+            <div class="container">
+              <a href="#gallery" class="contacts__link link">
+                Галерея
+              </a>
+            </div>
 
-            <a href="#actual-events" class="contacts__link link">
-              Виставки та події
-            </a>
+            <div class="container">
+              <a href="#actual-events" class="contacts__link link">
+                Виставки та події
+              </a>
+            </div>
           </div>
           <div class="contacts__nav-block">
-            <a href="#home" class="contacts__link link">
-              Про Нас
-            </a>
+            <div class="container">
+              <a href="#home" class="contacts__link link">
+                Про Нас
+              </a>
+            </div>
 
-            <a href="#contacts" class="contacts__link link">
-              Контакти
-            </a>
+            <div class="container">
+              <a href="#contacts" class="contacts__link link">
+                Контакти
+              </a>
+            </div>
           </div>
         </nav>
       </section>
