--- a/src/index.html
+++ b/src/index.html
@@ -214,7 +214,7 @@
       <section class="contact-us page__contact-us" id="contact-us">
         <div class="contact-us__header">
           <a href="#" class="contact-us__logo logo">
-            <span class="logo__text">
+            <span class="logo__text contact-us__logo-text">
               NA
               <br>
               MU
@@ -238,70 +238,76 @@
           </div>
         </div>
         <div class="contact-us__info">
-          <div class="contact-us__work">
-            <h3 class="contact-us__title">Графік роботи</h3>
-            <p class="contact-us__time">
-              <span class="contact-us__time-work">12:00 — 20:00</span>
-              среда
-              <br>
-              <span class="contact-us__time-work">12:00 — 20:00</span>
-              четверг
-              <br>
-              <span class="contact-us__time-work">12:00 — 20:00</span>
-              п’ятниця
-              <br>
-              <span class="contact-us__time-work">12:00 — 20:00</span>
-              субота
-              <br>
-              <span class="contact-us__time-work">12:00 — 20:00</span>
-              неділя
-            </p>
-            <p class="contact-us__text">
-              <span class="contact-us__text--bolt">
-                Вихідні
-              </span>
-              понеділок, вівторок
-              <br>
-              Каса припиняє роботу за 1 годину до закриття музею
-            </p>
-          </div>
-          <div class="contact-us__contact">
-            <h3 class="contact-us__title">Контакти</h3>
-            <div class="contact-us__links">
-              <a href="https://goo.gl/maps/oAXBGxmFbJB2M8XNA" class="contact-us__link">
-                вул. М.Грушевського,6;
+          <div class="contact-us__block">
+            <div class="contact-us__work">
+              <h3 class="contact-us__title">Графік роботи</h3>
+              <p class="contact-us__time">
+                <span class="contact-us__time-work">12:00 — 20:00</span>
+                среда
                 <br>
-                Київ, 01001
-              </a>
-              <br>
-              <a href="tel:+380442781357" class="contact-us__link">тел. +38 (044) 278-13-57</a>
-              <br>
-              <a href="tel:+380442787454" class="contact-us__link">факс +38 (044) 278-74-54</a>
-              <br>
-              <a href="mailto:info@namu.kiev.ua" class="contact-us__link">e-mail: info@namu.kiev.ua</a>
+                <span class="contact-us__time-work">12:00 — 20:00</span>
+                четверг
+                <br>
+                <span class="contact-us__time-work">12:00 — 20:00</span>
+                п’ятниця
+                <br>
+                <span class="contact-us__time-work">12:00 — 20:00</span>
+                субота
+                <br>
+                <span class="contact-us__time-work">12:00 — 20:00</span>
+                неділя
+              </p>
+              <p class="contact-us__text">
+                <span class="contact-us__text--bolt">
+                  Вихідні
+                </span>
+                понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+            <div class="contact-us__contact">
+              <h3 class="contact-us__title">Контакти</h3>
+              <div class="contact-us__links">
+                <a href="https://goo.gl/maps/oAXBGxmFbJB2M8XNA" class="contact-us__link">
+                  вул. М.Грушевського,6;
+                  <br>
+                  Київ, 01001
+                </a>
+                <br>
+                <a href="tel:+380442781357" class="contact-us__link">тел. +38 (044) 278-13-57</a>
+                <br>
+                <a href="tel:+380442787454" class="contact-us__link">факс +38 (044) 278-74-54</a>
+                <br>
+                <a href="mailto:info@namu.kiev.ua" class="contact-us__link">e-mail: info@namu.kiev.ua</a>
+              </div>
+            </div>
+            <a href="#" class="contact-us__go-header">
+              <img src="./images/arrow-button.svg" alt="↑">
+            </a>
+          </div>
+          <div class="contact-us__nav">
+            <ul>
+              <li class="contact-us__nav-item">
+                <a href="#gallery" class="contact-us__nav-link">Галерея</a>
+              </li>
+              <li class="contact-us__nav-item">
+                <a href="#current-events" class="contact-us__nav-link">Виставки та події</a>
+              </li>
+            </ul>
+            <div class="contact-us__nav-block">
+              <ul>
+                <li class="contact-us__nav-item">
+                  <a href="#" class="contact-us__nav-link">Про Нас</a>
+                </li>
+                <li class="contact-us__nav-item">
+                  <a href="#contact-us" class="contact-us__nav-link">Контакти</a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
-        <div class="contact-us__nav">
-          <ul>
-            <li class="contact-us__nav-item">
-              <a href="#gallery" class="contact-us__nav-link">Галерея</a>
-            </li>
-            <li class="contact-us__nav-item">
-              <a href="#current-events" class="contact-us__nav-link">Виставки та події</a>
-            </li>
-          </ul>
-          <div class="contact-us__nav-block">
-            <ul>
-              <li class="contact-us__nav-item">
-                <a href="#" class="contact-us__nav-link">Про Нас</a>
-              </li>
-              <li class="contact-us__nav-item">
-                <a href="#contact-us" class="contact-us__nav-link">Контакти</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+
       </section>
 
     </main>
